--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <script type="text/javascript" src="sound.js"></script>
 		<script type="text/javascript">
             var sounds = new Array();
+            var currentSound = null;
             var soundContainer = document.getElementById('soundContainer');
             init();
 
